fix spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1144,7 +1144,7 @@ nav[data-toggle="toc"] {
 
   p {
     font-size: 1rem;
-    line-height: 1.7;
+    line-height: 1.5;
     color: var(--global-text-color);
     margin-bottom: 0.75rem;
   }
